--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     <header class="site-header">
         <nav class="navbar">
             <div class="logo">
-                <h1>Iron Heist Poetry</h1>
+                <h1>Iron Heist's Poetry</h1>
             </div>
             <button class="nav-toggle" aria-label="Toggle navigation menu">
                 <i class="fas fa-chevron-down"></i>
