--- a/index.html
+++ b/index.html
@@ -3,38 +3,38 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You are my Moonlight' for soul-stirring verses.">
-    <meta name="keywords" content="poetry, philosophy, Iron Heist, John Colt, Ironheist6, Johncolt29, Garden of Grief, You are my Moonlight, philosophical poetry, emotional poetry">
+    <meta name="description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
+    <meta name="keywords" content="poetry, philosophy, Iron Heist, John Colt, Ironheist6, Johncolt29, Garden of Grief, You and the Moon, philosophical poetry, emotional poetry">
     <meta name="author" content="Iron Heist (John Colt)">
     <meta name="robots" content="index, follow">
     <meta property="og:title" content="My Poetry Collection | Iron Heist (John Colt)">
-    <meta property="og:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You are my Moonlight' for soul-stirring verses.">
+    <meta property="og:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
     <meta property="og:image" content="https://yourwebsite.com/poetry.png">
     <meta property="og:url" content="https://yourwebsite.com">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="My Poetry Collection | Iron Heist (John Colt)">
-    <meta name="twitter:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You are my Moonlight' for soul-stirring verses.">
+    <meta name="twitter:description" content="Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.">
     <meta name="twitter:image" content="https://yourwebsite.com/poetry.png">
     <script type="application/ld+json">
     {
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "My Poetry Collection | Iron Heist (John Colt)",
-        "description": "Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You are my Moonlight' for soul-stirring verses.",
+        "description": "Explore the profound poetry and philosophical musings of Iron Heist (John Colt). Dive into collections like 'Garden of Grief' and 'You and the Moon' for soul-stirring verses.",
         "url": "https://yourwebsite.com",
         "author": {
             "@type": "Person",
             "name": "Iron Heist (John Colt)"
         },
         "image": "https://yourwebsite.com/poetry.png",
-        "keywords": "poetry, philosophy, Iron Heist, John Colt, Ironheist6, Johncolt29, Garden of Grief, You are my Moonlight, philosophical poetry, emotional poetry"
+        "keywords": "poetry, philosophy, Iron Heist, John Colt, Ironheist6, Johncolt29, Garden of Grief, You and the Moon, philosophical poetry, emotional poetry"
     }
     </script>
     <title>My Poetry Collection | Iron Heist (John Colt)</title>
-    <link rel="icon" href="1.png" type="image/x-icon" />
-    <link rel="preload" href="KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
-    <link rel="preload" href="BG 1.webp" as="image" type="image/webp">
+    <link rel="icon" href="png src/1.png" type="image/x-icon" />
+    <link rel="preload" href="fonts src/KirimomiSwash.ttf" as="font" type="font/ttf" crossorigin>
+    <link rel="preload" href="webp src/BG 1.webp" as="image" type="image/webp">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css" integrity="sha512-iecdLmaskl7CVkqkXNQ/ZH/XLlvWZOJyj7Yy7tcenmpD1ypASozpmT/E0iPtmFIB46ZmdtAc9eNBvH0H/ZpiQ==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="styles.css">
 </head>
@@ -52,6 +52,7 @@
                 <li><a href="#about">About</a></li>
                 <li><a href="#timeline">Timeline</a></li>
                 <li><a href="#playlists">Playlists</a></li>
+                <li><a href="blog src/blog.html">Blog</a></li>
             </ul>
             <div class="dark-mode-toggle">
                 <input type="checkbox" id="darkModeToggle" class="dark-mode-checkbox" onchange="toggleDarkMode()">
@@ -81,8 +82,8 @@
             <h2>Featured Works</h2>
             <div class="featured-grid">
                 <div class="featured-poem">
-                    <a href="viewer.html?pdf=pdfs/GARDEN OF GRIEF.pdf&title=Garden of Grief" target="_blank">
-                        <img src="GOG.webp" alt="Garden of Grief - A Collection of Poems by Iron Heist">
+                    <a href="viewer src/viewer.html?pdf=pdfs/GARDEN OF GRIEF.pdf&title=Garden of Grief" target="_blank">
+                        <img src="webp src/GOG.webp" alt="Garden of Grief - A Collection of Poems by Iron Heist">
                         <div class="featured-info">
                             <h3>Garden of Grief</h3>
                             <p>A soul-stirring journey through loss and renewal</p>
@@ -90,8 +91,8 @@
                     </a>
                 </div>
                 <div class="featured-poem">
-                    <a href="viewer.html?pdf=pdfs/You and the Moon.pdf&title=You and the Moon" target="_blank">
-                        <img src="You are my moonlight.webp" alt="You and the Moon - Romantic Poetry by Iron Heist">
+                    <a href="viewer src/viewer.html?pdf=pdfs/You and the Moon.pdf&title=You and the Moon" target="_blank">
+                        <img src="webp src/You are my moonlight.webp" alt="You and the Moon - Romantic Poetry by Iron Heist">
                         <div class="featured-info">
                             <h3>You and the Moon</h3>
                             <p>Romantic verses bathed in lunar glow</p>
@@ -99,6 +100,13 @@
                     </a>
                 </div>
             </div>
+        </section>
+
+        <section class="blog-section" id="blog">
+            <h2>Poetic Musings</h2>
+            <p>Weekly reflections and inspirations behind my work.</p>
+            <div class="blog-grid" id="blogContainer"></div>
+            <a href="blog src/blog.html" class="cta-button">View All Posts</a>
         </section>
 
         <section class="book-section" id="books">
@@ -182,18 +190,18 @@
     <footer class="footer">
         <div class="social-links">
             <a href="https://www.instagram.com/johncolt29" target="_blank" aria-label="Follow Iron Heist on Instagram">
-                <img src="instagram.png" alt="Instagram">
+                <img src="png src/instagram.png" alt="Instagram">
             </a>
             <a href="https://www.wattpad.com/user/iron_heist" target="_blank" aria-label="Follow Iron Heist on Wattpad">
-                <img src="wattpad.png" alt="Wattpad">
+                <img src="png src/wattpad.png" alt="Wattpad">
             </a>
             <a href="https://ironheist6.tumblr.com/" target="_blank" aria-label="Follow Iron Heist on Tumblr">
-                <img src="tumblr.png" alt="Tumblr">
+                <img src="png src/tumblr.png" alt="Tumblr">
             </a>
         </div>
         <p class="date-time" id="date-time"></p>
         <div class="copyright">
-            © <span id="current-year"></span> Iron Heist. All Rights Reserved. For permissions, contact <a href="/cdn-cgi/l/email-protection#57e7f6f2f7e0e5e2f2f7b517e0eaf6e2f2f779e4e8ea">[email protected]</a>
+            © <span id="current-year"></span> Iron Heist. All Rights Reserved. For permissions, contact <a href="/cdn-cgi/l/email-protection#2c5c4d494c5b5e59494c0e2c5b514d59494c02">[email protected]</a>
         </div>
         <div class="attribution">
             Icons by <a href="https://www.flaticon.com" style="color: #FFA500;">Flaticon</a><br>
@@ -205,9 +213,9 @@
         </div>
     </footer>
 
-    <a href="#" class="back-to-top" title="Go to top"><img src="top.png" alt="Back to top"></a>
+    <a href="#" class="back-to-top" title="Go to top"><img src="png src/top.png" alt="Back to top"></a>
 
     <script data-cfasync="false" src="/cdn-cgi/scripts/5c5dd728/cloudflare-static/email-decode.min.js"></script>
     <script src="script.js"></script>
-<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'93068fe5dc52e9f0',t:'MTc0NDY2ODkyOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9324b1457bc46771',t:'MTc0NDk4NDg2OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'9324f3a72b286755',t:'MTc0NDk4NzU4Ny4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading' !==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script><script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'932511fa99be4517',t:'MTc0NDk4ODgyOS4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
+<script>(function(){function c(){var b=a.contentDocument||a.contentWindow.document;if(b){var d=b.createElement('script');d.innerHTML="window.__CF$cv$params={r:'932646c6ef5753de',t:'MTc0NTAwMTQ3OC4wMDAwMDA='};var a=document.createElement('script');a.nonce='';a.src='/cdn-cgi/challenge-platform/scripts/jsd/main.js';document.getElementsByTagName('head')[0].appendChild(a);";b.getElementsByTagName('head')[0].appendChild(d)}}if(document.body){var a=document.createElement('iframe');a.height=1;a.width=1;a.style.position='absolute';a.style.top=0;a.style.left=0;a.style.border='none';a.style.visibility='hidden';document.body.appendChild(a);if('loading'!==document.readyState)c();else if(window.addEventListener)document.addEventListener('DOMContentLoaded',c);else{var e=document.onreadystatechange||function(){};document.onreadystatechange=function(b){e(b);'loading'!==document.readyState&&(document.onreadystatechange=e,c())}}}})();</script></body>
 </html>
